@@ -1,3 +1,9 @@
+2005-03-10  Jan Beulich  <jbeulich@novell.com>
+
+	* config/tc-tic54x.h (tic54x_macro_info): Change parameter type.
+	* config/tc-tic54x.c (tic54x_macro_info): Likewise. Replace hand-
+	crafted structure declarations with the types from macro.h.
+
 2005-03-09  Richard Sandiford  <rsandifo@redhat.com>
 
 	* config/tc-mips.c (s_cpsetup): Use '__gnu_local_gp' instead of '_gp'
